# agent-post

./: .gitignore  Cargo.toml  LICENSE  README.md
agent-post-ts/: package.json  tsconfig.json
agent-post-ts/src/: index.ts  types.ts
docs/: design-spec.md  protocol-spec.md
docs/superpowers/plans/: 2026-06-12-agent-post-phase1.md
docs/superpowers/specs/: 2026-06-12-agent-post-design.md
src/: config.rs  encryption.rs  group.rs  identity.rs  inbox.rs  lib.rs  main.rs  mcp.rs  message.rs  pair.rs  relay.rs  types.rs
tests/: group_test.rs  identity_test.rs  inbox_test.rs  integration_test.rs  message_test.rs  pair_test.rs
