[package]
name = "agent-post"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["serde", "zeroize", "rand_core", "fast"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
bs58 = "0.5"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
dirs = "5"
hex = "0.4"
argon2 = "0.5"
aes-gcm = "0.10"
base64 = "0.22"
rpassword = "5"

[dev-dependencies]
tempfile = "3"
